# SSRM-automation

./: .gitignore  CHANGELOG.md  README.md  errors.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.erb/configs/: webpack.config.base.ts  webpack.config.main.dev.ts  webpack.config.main.prod.ts  webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts  webpack.paths.ts
.github/workflows/: build.yml
assets/: assets.d.ts
old/: README.md  package-lock.json  package.json  tsconfig.json
old/.erb/scripts/: check-build-scripts.js
old/release/app/: package.json
old/src/main/: jsonHelper.ts  main.ts  menu.ts  util.ts
release/app/: package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: installer.nsi
src-tauri/src/: lib.rs
src-tauri/src/image_gen/: batch_thumbnail.rs  card.rs  mod.rs  playlist_thumbnail.rs  reweight_card.rs  ssrm_thumbnail.rs  utils.rs
src/api/: beatsaver.ts  scoresaber.ts
src/components/: AlertSystem.tsx  ConfirmationModal.tsx  GlobalLoadedMap.tsx  ProgressBar.tsx
src/components/forms/: BackgroundCustomizer.tsx  FileUploadSection.tsx  NativeFileUpload.tsx  index.ts
src/components/layout/: Footer.tsx  Navbar.tsx  index.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  DropdownMenu.tsx  Input.tsx  Skeleton.tsx  index.ts
src/constants/: animations.ts
src/helpers/: versionHelpers.ts
src/hooks/: index.ts  useBackgroundPosition.ts  useMapInfo.ts  useStarRatings.ts
src/main/: ffmpeg-installer.ts  helper.ts  jsonHelper.ts  main.ts  preload.ts  server.js  server.ts
src/main/generation/: index.ts
src/main/jsonModels/: response_1739988353735.json  ssConfig.json
src/pages/: Home.tsx
src/pages/Cards/: MapCard.tsx  MapCards.tsx  ReweightCard.tsx
src/pages/Playlists/: Playlist.tsx  (+2 more)
src/renderer/: App.css  App.tsx  index.ejs  index.tsx  main.css  splash.html  transitions.css
src/services/: updateService.ts
src/types/: index.ts
src/utils/: errorHandler.ts  index.ts  log.ts  storage.ts  tauri-api.ts
ssrm-automation/: package.json  pnpm-lock.yaml  vite.config.ts
ssrm-automation/src/: App.css  App.tsx
ssrm-automation/src-tauri/: Cargo.toml  tauri.conf.json
ssrm-automation/src-tauri/src/: card_generator.rs  lib.rs  main.rs
ssrm-automation/src-tauri/src/img_gen/card_generation/: map_card.rs  mod.rs  reweight_card.rs  types.rs  utils.rs
ssrm-automation/src-tauri/src/img_gen/thumbnail_generation/: thumbnail.rs
~/.tauri/: myapp.key  myapp.key.pub
(+135 files in other folders)
