[package]
name = "ssrm-automation"
version = "2.3.0-beta.1"
description = "A Tauri App"
authors = ["spoekle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssrm_automation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
tempfile = "3.8"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
bytes = "1.5"
rand = "0.8"
image = { version = "0.25", features = ["png", "jpeg"] }
imageproc = "0.25"
rusttype = "0.9"
ab_glyph = "0.2"
ab_glyph_rasterizer = "0.1"
rayon = "1.8" # For parallel processing

